# wh00t_client

./: .gitignore  README.md  README.rst  pyproject.toml
assets/audio/wh00t7_data/eff/d1f/: eff1f2b1.au
assets/image/: banner.xcf  iconHiDef.xcf  iconHiDef_no_background.xcf
asssets/audio/: A-ORiver.aup  wh00t7.aup
asssets/audio/A-ORiver_data/eff/d1f/: eff1f8ba.au  eff1fe8d.au
asssets/audio/wh00t7_data/eff/d1f/: eff1f3e3.au
asssets/image/: banner.xcf  icon.xcf
tests/: test_wh00t_client.py
wh00t_client/: client_handlers.py  client_network.py  client_settings.py  meme_collection.py  wh00t_client.py  wh00t_client_network.py
