[tool.poetry]
name = 'wh00t_client'
version = '1.0.0'
description = 'Simple python LAN chat client that works with the wh00t chat server'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.8'
python-dotenv = '^0.15.0'
Pillow = '^7.2.0'
emoji = '^0.6.0'
playsound = '1.2.2'
PyGObject = [{ version = '^3.36.1', platform = 'linux' }]
win10toast = [{ version = '^0.9'}]
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.2.1'}

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
