[tool.poetry]
name = 'wh00t_client'
version = '1.3.5'
description = 'Simple python LAN chat client that works with the wh00t chat server'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '~3.10'
python-dotenv = '^0.21.1'
Pillow = '^9.4.0'
emoji = '^2.2.0'
# playsound = '^1.3.0'
PyGObject = [{ version = '^3.42.2', platform = 'linux' }]
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.1'}

[tool.poetry.dev-dependencies]
pytest = '^6.2.5'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
